--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,56 @@ capi-media-tone-player (0.1.0-6) unstable; urgency=low
 
 capi-media-tone-player (0.1.0-5) unstable; urgency=low
 
-  * Initial release.
+  * Update error none value
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.1.0-5
 
- -- Seungkeun Lee <sngn.lee@samsung.com>  Wed, 07 Dec 2011 12:53:09 +0900
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Mon, 05 Dec 2011 11:06:33 +0900
+
+capi-media-tone-player (0.1.0-4) unstable; urgency=low
+
+  * Update Log formatting
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.1.0-4
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Sun, 27 Nov 2011 14:17:12 +0900
+
+capi-media-tone-player (0.1.0-3) unstable; urgency=low
+
+  * update namespace
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.1.0-3 
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Wed, 23 Nov 2011 13:17:03 +0900
+
+capi-media-tone-player (0.1.0-2) unstable; urgency=low
+
+  * add tone type
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.1.0-2
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Wed, 02 Nov 2011 17:00:07 +0900
+
+capi-media-tone-player (0.1.0-1) unstable; urgency=low
+
+  * SLP API Baseline
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.1.0-1
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Tue, 27 Sep 2011 17:55:13 +0900
+
+capi-media-tone-player (0.0.1-2) unstable; urgency=low
+
+  * Update dependancy
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.0.1-2 
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Mon, 29 Aug 2011 15:00:47 +0900
+
+capi-media-tone-player (0.0.1-1) unstable; urgency=low
+
+  * Initial Upload
+  * Git: slp-source.sec.samsung.net:slp/api/tone-player
+  * Tag: capi-media-tone-player_0.0.1-1
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Thu, 04 Aug 2011 17:32:41 +0900
