tone-player : Change APIs based on Tizen 2.3
Signed-off-by: dh8210.kim <dh8210.kim@samsung.com>
Change-Id: I2d183477a3c816c4f7409485aedd57a730d36102

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-JongHyuk Choi <jhchoi.choi at samsung dot com>
-YoungHun Kim <yh8004.kim at samsung dot com>
+Seungbae Shin <seungbae.shin at samsung dot com>
+DooHwan Kim <dh8210.kim at samsung dot com>
